# candle-mnist-demo

./: .gitignore  Cargo.toml  README.md
models/mnist/: README.md  model.safetensors
src/: lib.rs  main.rs  mnist.rs
src/utils/: gz_decoder.rs  mod.rs
